@@ -19,6 +19,21 @@
 			<label index="table">Table</label>
 			<label index="description">Description</label>
 			<label index="priority">Priority</label>
+			<label index="connector">Connector</label>
+			<label index="connector.details">Connector details</label>
+			<label index="data_type">Data type</label>
+			<label index="reference_node">Reference node</label>
+			<label index="external_key">External primary key</label>
+			<label index="storage_pid">Storage page</label>
+			<label index="enforce_pid">Enforce PID</label>
+			<label index="yes">Yes</label>
+			<label index="no">No</label>
+			<label index="additional_fields">Additional fields</label>
+			<label index="disabled_operations">Disabled operations</label>
+			<label index="none">None</label>
+			<label index="minimum_records">Minimum number of records</label>
+			<label index="general_information">General information</label>
+			<label index="columns_mapping">Columns mapping</label>
 			<label index="synchronise">Synchronise</label>
 			<label index="running_synchronisation">Synchronisation currrently running</label>
 			<label index="running">Running...</label>
@@ -71,6 +86,21 @@
 			<label index="table">Table</label>
 			<label index="description">Description</label>
 			<label index="priority">Priorité</label>
+			<label index="connector">Connecteur</label>
+			<label index="connector.details">Détails du connecteur</label>
+			<label index="data_type">Type de données</label>
+			<label index="reference_node">Noeud de référence</label>
+			<label index="external_key">Clé primaire externe</label>
+			<label index="storage_pid">Page de stockage</label>
+			<label index="enforce_pid">Respecter le PID</label>
+			<label index="yes">Oui</label>
+			<label index="no">Non</label>
+			<label index="additional_fields">Champs supplémentaires</label>
+			<label index="disabled_operations">Opérations désactivées</label>
+			<label index="none">Aucune</label>
+			<label index="minimum_records">Nombre minimum d'enregistrements</label>
+			<label index="general_information">Informations générales</label>
+			<label index="columns_mapping">Mapping des colonnes</label>
 			<label index="synchronise">Synchroniser</label>
 			<label index="running_synchronisation">Synchronisation en cours</label>
 			<label index="running">En cours...</label>
